--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,24 @@
+@import url('https://fonts.googleapis.com/css2?family=Cinzel&display=swap');
+
+*{
+  margin: 0px;
+  padding: 0px;
+}
+
+h1, h2, h3, h4, h5{
+  font-family: 'Cinzel';
+}
+
+h1{
+  color: #F8C630;
+}
+
+header{
+  background-color: #724E91;
+  margin: 0px;
+  padding: 2rem;
+}
+
 .App {
   text-align: center;
 }
