--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,48 @@ h1, h2, h3, h4, h5{
 h1{
   color: #F8C630;
 }
+.text-center{
+  text-align:center;
+}
+
+.center{
+  margin: 0 auto;
+}
+
+.mb-3{
+  margin-bottom: 2rem;
+}
+
+button{
+  min-width: 100px;
+  background-color: #5B9279;
+  border: none;
+  padding: .6rem;
+  border-radius: 10px;
+  color:white;
+  font-size: 16px;
+  /* color transition on the button so it's not as abrupt */
+}
+
+button:hover{
+  color: #5B9279;
+  background-color: #ffff;
+}
+
+fieldset {
+  border: 0;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+label {
+  display:  block;
+  margin-top: 1vh;
+}
+
+input[type="radio"] {
+  margin: 0px 5px;
+}
 
 .App {
   text-align: center;
@@ -20,6 +62,20 @@ h1{
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+
+body {
+  min-height: 77vh;
+}
+
+main {
+  background-color: #EEF0F2;
+  min-height: 55vh;
+  width: 50vw;
+  border-radius: 30px;
+  margin: 0 auto;
+  padding: 35px;
+  margin-top: 5vh;
 }
 
 @media (prefers-reduced-motion: no-preference) {
