--- a/src/App.css
+++ b/src/App.css
@@ -158,6 +158,22 @@ main {
   color: #61dafb;
 }
 
+.mc-button {
+  border-radius:4px;
+  padding: 5px;
+  margin: 5px;
+  min-width:200px;
+  display:inline-block;
+  margin: 0 auto;
+}
+
+.mc-button-container{
+  margin: 0 auto;
+  display:grid;
+  gap: 20px;
+  grid-template-columns: 1fr 1fr;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
