--- a/src/App.css
+++ b/src/App.css
@@ -57,6 +57,10 @@ h1, h2, h3, h4, h5{
   font-family: 'Cinzel';
 }
 
+h2{
+  font-size: 2rem;
+}
+
 .background-white{
   background-color: #fff;
 }
@@ -98,6 +102,10 @@ h1{
   margin: 0 auto;
 }
 
+.m-3{
+  margin: 1rem;
+}
+
 .my-1{
 margin-top:.8rem;
 margin-bottom:.8rem;
@@ -107,8 +115,26 @@ margin-bottom:.8rem;
   margin-top: 2rem;
   margin-bottom: 2rem;
 }
+
+.mb-1{
+  margin-bottom: .8rem;
+}
+
 .mb-3{
   margin-bottom: 2rem;
+}
+
+.mb-6{
+  margin-bottom:4rem;
+}
+
+
+.px-3{
+  padding: 1rem;
+}
+
+.pb-3{
+  padding-bottom:3rem;
 }
 
 button{
@@ -218,7 +244,7 @@ main {
   color: #e77575;
 }
 
-.source-select__input{
+.input-per60{
   width: 60%;
   margin-bottom: 20px;
 }
